--- a/resources/scss/theme/_dark.scss
+++ b/resources/scss/theme/_dark.scss
@@ -120,6 +120,10 @@ kbd > kbd {
   color: $fore--minus;
 }
 
+.action {
+  @include action-color($back--inverse, $accent);
+}
+
 .focus {
   color: $focus;
 }
